Adds perf smoke tests and perf tool report Handles switches is -Dquarkus.native.additional-build-args= Uploader to Collector Shuffling args around to make perf 21.3 compatible testApp should match the actual app tested parameters keys replaced incorrectly Collector spits JSON back, so application/json